bk_ida/gccida/g2/peephole2_optimize
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/peephole2_optimize/src/recog.c:3526:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v32; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/peephole2_optimize/src/recog.c:3538:5: error: expected ';' after expression
edge v44; // rdx 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/peephole2_optimize/src/recog.c:3538:6: error: use of undeclared identifier 'v44'
edge v44; // rdx 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/peephole2_optimize/src/recog.c:3544:5: error: expected ';' after expression
edge nehea; // [rsp+8h] [rbp-110h] 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/peephole2_optimize/src/recog.c:3544:6: error: use of undeclared identifier 'nehea'; did you mean 'nehe'?
edge nehea; // [rsp+8h] [rbp-110h] 
     ^~~~~
     nehe
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/peephole2_optimize/src/recog.c:3543:26: note: 'nehe' declared here
 struct basic_block_def *nehe; // [rsp+8h] [rbp-110h] 
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/peephole2_optimize/src/recog.c:3579:1: error: use of undeclared identifier 'peep2_insn_data_0'; did you mean 'peep2_insn_data'?
peep2_insn_data_0[0].insn = 0LL; 
^~~~~~~~~~~~~~~~~
peep2_insn_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/peephole2_optimize/src/recog.c:2841:31: note: 'peep2_insn_data' declared here
static struct peep2_insn_data peep2_insn_data[MAX_INSNS_PER_PEEP2 + 1];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/peephole2_optimize/src/recog.c:3580:1: error: use of undeclared identifier 'peep2_insn_data_0'; did you mean 'peep2_insn_data'?
peep2_insn_data_0[1].insn = 0LL; 
^~~~~~~~~~~~~~~~~
peep2_insn_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/peephole2_optimize/src/recog.c:2841:31: note: 'peep2_insn_data' declared here
static struct peep2_insn_data peep2_insn_data[MAX_INSNS_PER_PEEP2 + 1];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/peephole2_optimize/src/recog.c:3583:1: error: use of undeclared identifier 'peep2_insn_data_0'; did you mean 'peep2_insn_data'?
peep2_insn_data_0[2].insn = 0LL; 
^~~~~~~~~~~~~~~~~
peep2_insn_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/peephole2_optimize/src/recog.c:2841:31: note: 'peep2_insn_data' declared here
static struct peep2_insn_data peep2_insn_data[MAX_INSNS_PER_PEEP2 + 1];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/peephole2_optimize/src/recog.c:3586:1: error: use of undeclared identifier 'peep2_insn_data_0'; did you mean 'peep2_insn_data'?
peep2_insn_data_0[4].insn = global_rtl[0]; 
^~~~~~~~~~~~~~~~~
peep2_insn_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/peephole2_optimize/src/recog.c:2841:31: note: 'peep2_insn_data' declared here
static struct peep2_insn_data peep2_insn_data[MAX_INSNS_PER_PEEP2 + 1];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/peephole2_optimize/src/recog.c:3587:1: error: use of undeclared identifier 'peep2_insn_data_0'; did you mean 'peep2_insn_data'?
peep2_insn_data_0[3].insn = 0LL; 
^~~~~~~~~~~~~~~~~
peep2_insn_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/peephole2_optimize/src/recog.c:2841:31: note: 'peep2_insn_data' declared here
static struct peep2_insn_data peep2_insn_data[MAX_INSNS_PER_PEEP2 + 1];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/peephole2_optimize/src/recog.c:3589:14: error: use of undeclared identifier 'peep2_insn_data_0'; did you mean 'peep2_insn_data'?
bitmap_copy( peep2_insn_data_0[4].live_before, live); 
             ^~~~~~~~~~~~~~~~~
             peep2_insn_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/peephole2_optimize/src/recog.c:2841:31: note: 'peep2_insn_data' declared here
static struct peep2_insn_data peep2_insn_data[MAX_INSNS_PER_PEEP2 + 1];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/peephole2_optimize/src/recog.c:3598:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
end = ( rtx)end[1]; 
            ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/peephole2_optimize/src/recog.c:3611:1: error: use of undeclared identifier 'peep2_insn_data_0'; did you mean 'peep2_insn_data'?
peep2_insn_data_0[v9].insn = ( rtx)v8; 
^~~~~~~~~~~~~~~~~
peep2_insn_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/peephole2_optimize/src/recog.c:2841:31: note: 'peep2_insn_data' declared here
static struct peep2_insn_data peep2_insn_data[MAX_INSNS_PER_PEEP2 + 1];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/peephole2_optimize/src/recog.c:3613:14: error: use of undeclared identifier 'peep2_insn_data_0'; did you mean 'peep2_insn_data'?
bitmap_copy( peep2_insn_data_0[peep2_current].live_before, live); 
             ^~~~~~~~~~~~~~~~~
             peep2_insn_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/peephole2_optimize/src/recog.c:2841:31: note: 'peep2_insn_data' declared here
static struct peep2_insn_data peep2_insn_data[MAX_INSNS_PER_PEEP2 + 1];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/peephole2_optimize/src/recog.c:3628:7: error: use of undeclared identifier 'peep2_insn_data_0'; did you mean 'peep2_insn_data'?
v16 = peep2_insn_data_0[v15].insn; 
      ^~~~~~~~~~~~~~~~~
      peep2_insn_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/peephole2_optimize/src/recog.c:2841:31: note: 'peep2_insn_data' declared here
static struct peep2_insn_data peep2_insn_data[MAX_INSNS_PER_PEEP2 + 1];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/peephole2_optimize/src/recog.c:3659:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v30.rtwint = ( __int64)v16[3].fld[0]; 
                       ^~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/peephole2_optimize/src/recog.c:3661:21: error: assigning to 'uint64' (aka 'unsigned long long') from incompatible type 'struct rtx_def'
*( _QWORD *)&v29[4] = v16[4]; 
                    ^ ~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/peephole2_optimize/src/recog.c:3688:17: error: use of undeclared identifier 'peep2_insn_data_0'
if ( *( _WORD *)peep2_insn_data_0[v35].insn == 34 ) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/peephole2_optimize/src/recog.c:3698:23: error: use of undeclared identifier 'peep2_insn_data_0'; did you mean 'peep2_insn_data'?
note = find_reg_note( peep2_insn_data_0[v17].insn, REG_EH_REGION, 0LL); 
                      ^~~~~~~~~~~~~~~~~
                      peep2_insn_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/peephole2_optimize/src/recog.c:2841:31: note: 'peep2_insn_data' declared here
static struct peep2_insn_data peep2_insn_data[MAX_INSNS_PER_PEEP2 + 1];
                              ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/peephole2_optimize/src/obj/recog.o] Error 1
